--- a/LockScreenDemo/res/layout/activity_main.xml
+++ b/LockScreenDemo/res/layout/activity_main.xml
@@ -3,13 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LockActivity"
-    android:gravity="center_vertical" >
+    android:gravity="center_vertical"
+    android:orientation="vertical">
+    
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="60dp" />
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="120dp" />
+        android:textSize="130dp" />
 
 </LinearLayout>
