--- a/LockScreenDemo/res/layout/activity_main.xml
+++ b/LockScreenDemo/res/layout/activity_main.xml
@@ -5,13 +5,17 @@
     tools:context=".LockActivity"
     android:gravity="center_vertical"
     android:orientation="vertical">
-    
+
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textSize="60dp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"/>
 
     <TextView
         android:id="@+id/tv_time"
