--- a/LockScreenDemo/res/values/styles.xml
+++ b/LockScreenDemo/res/values/styles.xml
@@ -1,20 +1,9 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
-    <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
     <style name="Theme.AppTheme" parent="android:Theme.NoTitleBar.Fullscreen">
@@ -22,6 +11,31 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/black</item>
         <item name="android:windowContentOverlay">@null</item>
+        <item name="fontFilePath">fonts/digigraphics.ttf</item>
     </style>
-
+    <!-- UI ctronls -->
+    <style name="font_style_486_port">
+        <item name="fontFilePath">@string/font_file_path_486</item>
+        <item name="fontSize2Date">20dp</item>
+        <item name="fontSize2Time">35dp</item>
+        <item name="fontColor2Date">#FFFFFF</item>
+        <item name="fontColor2Time">#FFFFFF</item>
+        <item name="backgroundColor2Custom">#000000</item>
+    </style>
+    <style name="font_style_digit_port">
+        <item name="fontFilePath">@string/font_file_path_digit</item>
+        <item name="fontSize2Date">20dp</item>
+        <item name="fontSize2Time">40dp</item>
+        <item name="fontColor2Date">#FFFFFF</item>
+        <item name="fontColor2Time">#FFFFFF</item>
+        <item name="backgroundColor2Custom">#000000</item>
+    </style>
+    <style name="font_style_digigraphics_port">
+        <item name="fontFilePath">@string/font_file_path_digigraphics</item>
+        <item name="fontSize2Date">15dp</item>
+        <item name="fontSize2Time">30dp</item>
+        <item name="fontColor2Date">#FFFFFF</item>
+        <item name="fontColor2Time">#FFFFFF</item>
+        <item name="backgroundColor2Custom">#000000</item>
+    </style>
 </resources>
