--- a/LockScreenDemo/res/values/styles.xml
+++ b/LockScreenDemo/res/values/styles.xml
@@ -9,7 +9,7 @@
     <style name="Theme.AppTheme" parent="android:Theme.NoTitleBar.Fullscreen">
         <item name="android:windowAnimationStyle">@null</item>
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="fontFilePath">fonts/digigraphics.ttf</item>
     </style>
