--- a/LockScreenDemo/res/layout/activity_main.xml
+++ b/LockScreenDemo/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
             <LinearLayout
-                android:id="@+id/move"
+                android:id="@+id/main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
